linkedlist sol